# cppcourse-brunel

./: CMakeLists.txt  README.md  param.in  plotA.py  plotB_C_D.py
Utility/: Constants.h
docs/: Doxyfile.in  ProjectDescription.md
src/: main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp
src/main.dSYM/Contents/Resources/DWARF/: main
tests/: neuron_unittest.cpp
